# ms-helloworld-lib

./: CMakeLists.txt  README.md
ms-helloworld-lib/: AbstractRequestHandler.cpp  AbstractRequestHandler.h  CMakeLists.txt  Manifest.cpp  MicroServerHelloWorldRequestHandler.cpp  MicroServerHelloWorldRequestHandler.h  MicroServerRequestHandlerProvider.cpp  MicroServerRequestHandlerProvider.h
test/: CMakeLists.txt  MicroServerHelloWorldRequestHandlerTest.cpp  MicroServerRequestHandlerProviderTest.cpp
